BillingHub/force-app/main/default/objects/Churn_Insight__c/Churn_Insight__c.object-meta.xml
<CustomObject>
    <label>Churn Insight</label>
    <pluralLabel>Churn Insights</pluralLabel>
    <nameField>
        <label>Insight Number</label>
        <type>AutoNumber</type>
        <displayFormat>CI-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>