BillingHub/force-app/main/default/objects/Churn_Insight__c/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <label>Analysis</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>