BillingHub/force-app/main/default/objects/Churn_Insight__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <type>Lookup</type>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Churn Insights</relationshipLabel>
    <relationshipName>Churn_Insights</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>